@@ -42,4 +42,5 @@
 2
 24
 6
-Total time spent: 2324
+[]
+Total time spent: 2360
