@@ -49,3 +49,6 @@ do(x^2+5,10^10)
 do(4*x^2+5,10^10)
 do(x^2+x+1,7*13*11^2*10^4)
 do(25*x^2+45*x+21,10^4)
+
+\\ short continued fraction [#1629]
+thue(-14*x^3+10*x^2+63*x-5,1)
